# nodejs-loves-rust

./: .gitignore  Cargo.toml  README.md  index.js  native.js  package.json
src/: function.rs  hello_world.rs  lib.rs  promise.rs
