[package]
name = "rust-neon-addon"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.8.3"
default-features = false
features = ["napi-6", "event-queue-api"]

[dependencies]
num-bigint = "0.2"
num-traits = "0.2"